---
source: hydro_lang/src/rewrites/persist_pullup.rs
expression: optimized.ir()
---
[
    ForEach {
        f: stageleft :: runtime_support :: fn1_type_hint :: < i32 , () > ({ use crate :: __staged :: rewrites :: persist_pullup :: tests :: * ; | n | println ! ("{}" , n) }),
        input: Persist(
            Map {
                f: stageleft :: runtime_support :: fn1_type_hint :: < i32 , i32 > ({ use crate :: __staged :: rewrites :: persist_pullup :: tests :: * ; | v | v + 1 }),
                input: Tee {
                    inner: <tee>: Source {
                        source: Iter(
                            { use crate :: __staged :: rewrites :: persist_pullup :: tests :: * ; 0 .. 10 },
                        ),
                        location_kind: Process(
                            0,
                        ),
                    },
                },
            },
        ),
    },
    ForEach {
        f: stageleft :: runtime_support :: fn1_type_hint :: < i32 , () > ({ use crate :: __staged :: rewrites :: persist_pullup :: tests :: * ; | n | println ! ("{}" , n) }),
        input: Persist(
            Map {
                f: stageleft :: runtime_support :: fn1_type_hint :: < i32 , i32 > ({ use crate :: __staged :: rewrites :: persist_pullup :: tests :: * ; | v | v + 1 }),
                input: Tee {
                    inner: <tee>: Source {
                        source: Iter(
                            { use crate :: __staged :: rewrites :: persist_pullup :: tests :: * ; 0 .. 10 },
                        ),
                        location_kind: Process(
                            0,
                        ),
                    },
                },
            },
        ),
    },
]
